--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,20 +4,31 @@
     name: "@Development Tools"
     state: present
   become: true
-- name: "install epel-release dependency"
-  package:
-    name: epel-release
-    state: present
-  become: true
+  #- name: "install epel-release dependency"
+  #  package:
+  #    name: epel-release
+  #    state: present
+  #  become: true
 - name: "install Power Tools dependency"
   package:
     name: dnf-plugins-core
     state: present
   become: true
-- name: "install {{ APP_NAME }} dependencies"
-  shell:
-    cmd: yum builddep -y yakuake
+  #- name: "install {{ APP_NAME }} dependencies"
+  #  shell:
+  #    cmd: yum builddep -y yakuake
+  #  become: true
+- name: "Install dependencies as root: {{ APP_DEPENDENCIES | join(' ') }}"
+  package:
+    name: "{{ APP_DEPENDENCIES }}"
   become: true
+  register: INSTALL_DEPENDENCIES
+  ignore_errors: true
+  when: ansible_pkg_mgr != 'homebrew'
+- name: "Install dependencies as user {{ APP_USER }}: {{ APP_DEPENDENCIES | join(' ') }}"
+  shell: "pkcon install -y {{ item }} | true"
+  loop: "{{ APP_DEPENDENCIES }}"
+  when: ansible_pkg_mgr != 'homebrew' and INSTALL_DEPENDENCIES.failed
 - name: Create the directory {{ APP_SRC }}
   file:
     name: "{{ APP_SRC }}"
